# Y.A.R.V.I.S.-POS

./: .gitignore  RESUMEN_PROYECTO.md  reset.sh  run.bat  run.sh
yarvis-IA/: clean_all.sh  main.py  requirements.txt
yarvis-app/src-tauri/: Cargo.toml  tauri.conf.json
yarvis-app/src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  sidecar.rs
yarvis-app/src-tauri/src/backventanas/: mod.rs
yarvis-app/src-tauri/src/backventanas/adminclientes/: mod.rs
yarvis-app/src-tauri/src/backventanas/adminconfig/: auth.rs
yarvis-app/src-tauri/src/backventanas/adminempleados/: empleados.rs  mod.rs  modalmetas.rs
yarvis-app/src-tauri/src/backventanas/adminfinanzas/: finanzas.rs
yarvis-app/src-tauri/src/backventanas/adminparser/: parser_commands.rs
yarvis-app/src-tauri/src/backventanas/adminventas/: ventas.rs
yarvis-app/src-tauri/src/backventanas/backadmin/: mod.rs
yarvis-app/src-tauri/src/backventanas/backadmin/adminclientes/: clientes.rs
yarvis-app/src-tauri/src/backventanas/backadmin/adminconfig/: auth.rs
yarvis-app/src-tauri/src/backventanas/backadmin/adminempleados/: modalempleado.rs  modalturnos.rs
yarvis-app/src-tauri/src/backventanas/backadmin/adminfinanzas/: alertas.rs  cortes.rs  export.rs  gastos.rs  graficas.rs  metricas.rs  mod.rs  models.rs
yarvis-app/src-tauri/src/backventanas/backadmin/admininventory/: inventory.rs
yarvis-app/src-tauri/src/backventanas/backadmin/adminparser/: mod.rs  parser_csv.rs  parser_txt.rs
yarvis-app/src-tauri/src/backventanas/backempleado/: mod.rs
yarvis-app/src-tauri/src/backventanas/db/: db.rs
yarvis-app/src-tauri/src/commands/: ai.rs  auth.rs  inventory.rs  mod.rs  parser.rs  tickets.rs
yarvis-app/src-tauri/src/parser_rs/: mod.rs  parser_csv.rs  parser_excel.rs  parser_txt.rs  utils.rs
(+95 files in other folders)
