[package]
name = "yarvis-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yarvis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.38", features = ["full"] }
tauri-plugin-dialog = "2"
# HTTP client para el health check del sidecar Python
reqwest = { version = "0.12", features = ["json", "stream"] }
# Stream utilities para leer SSE chunk-by-chunk
futures-util = "0.3"
# Hashing seguro de contraseñas (Primera Ola - Seguridad)
argon2 = "0.5"
rand = "0.8"
# Decodificación base64 para embeddings (Segunda Ola)
base64 = "0.22"
# Serialización JSON para llamadas HTTP a Python
serde_json = "1"
# SHA256 para hashing de catálogos
sha2 = "0.10"
# Fechas y tiempo para módulo Finanzas
chrono = { version = "0.4", features = ["serde"] }
# PDF export para reportes financieros
printpdf = "0.4"
# Excel export (calamine lee/escribe xlsx)
calamine = "0.21"
# Background jobs scheduler para alertas y recálculos
tokio-cron-scheduler = { version = "0.11", features = ["tokio1"] }
